--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "components": "^0.1.0",
     "flowbite-react": "^0.7.2",
-    "gh-pages": "^6.1.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "tailwindcss": "^3.4.0",
     "tw-elements-react": "^1.0.0-alpha2",
@@ -32,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-page -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "react-icons": "^4.12.0"
   }
 }
