--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "components": "^0.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "flowbite-react": "^0.7.2",
     "next": "^14.0.4",
     "react": "^18.2.0",
