--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "scroll-carousel-react": "^1.0.0",
     "tailwindcss": "^3.4.0",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
