--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
+    "pure-react-carousel": "^1.30.1",
     "react-icons": "^4.12.0"
   }
 }
