--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "components": "^0.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "flowbite-react": "^0.7.2",
